--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,14 @@
 [metadata]
 name = Mopidy-CalmRadio
-version = 0.1.0
+version = 1.0.0
 url = https://github.com/ron4mac/mopidy-calmradio
 author = Ron Crans
 author_email = fortheron@me.com
 license = Apache License, Version 2.0
 license_file = LICENSE
 description = Mopidy extension to play Calm Radio streams
-long_description = file: README.rst
+long_description = file: README.md
+long_description_content_type = text/markdown
 classifiers =
     Environment :: No Input/Output (Daemon)
     Intended Audience :: End Users/Desktop
@@ -17,7 +18,6 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Topic :: Multimedia :: Sound/Audio :: Players
-
 
 [options]
 zip_safe = False
@@ -29,57 +29,11 @@ install_requires =
     Pykka >= 2.0.1
     setuptools
 
-
-[options.extras_require]
-lint =
-    black
-    check-manifest
-    flake8
-    flake8-bugbear
-    flake8-import-order
-    isort[pyproject]
-release =
-    twine
-    wheel
-test =
-    pytest
-    pytest-cov
-dev =
-    %(lint)s
-    %(release)s
-    %(test)s
-
-
 [options.packages.find]
 exclude =
     tests
     tests.*
 
-
 [options.entry_points]
 mopidy.ext =
     calmradio = mopidy_calmradio:Extension
-
-
-[flake8]
-application-import-names = mopidy_calmradio, tests
-max-line-length = 80
-exclude = .git, .tox, build
-select =
-    # Regular flake8 rules
-    C, E, F, W
-    # flake8-bugbear rules
-    B
-    # B950: line too long (soft speed limit)
-    B950
-    # pep8-naming rules
-    N
-ignore =
-    # E203: whitespace before ':' (not PEP8 compliant)
-    E203
-    # E501: line too long (replaced by B950)
-    E501
-    # W503: line break before binary operator (not PEP8 compliant)
-    W503
-    # B305: .next() is not a thing on Python 3 (used by playback controller)
-    B305
